# GoMavSimulator

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Main.gd  Main.tscn  README.md  export_presets.cfg  icon.svg.import  project.godot  setup.sh
addons/mavsdk/: mavsdk.gdextension
addons/ros2dds/: ros2dds.gdextension
addons/serial/: serial.gdextension
assets/district/: district_settings.gd
assets/fonts/: overview.PNG.import
assets/icon/: GoMavSimulator.png.import  GoMavSimulatorUnNamed.png.import
assets/models/: matrice_300_rtk.glb.import  (+9 more)
docs/: Development.md  GDExtension.md  GettingStarted.md  README.md  Settings.md
extensions/: CMakeLists.txt  ubuntu_setup.sh
extensions/mavsdk/: CMakeLists.txt  SConstruct  SConstruct.in  register_types.cpp
extensions/mavsdk/include/: go_mavsdk.h  go_mavsdk_server.h  ned2eus.h
extensions/mavsdk/src/: go_mavsdk.cpp  go_mavsdk_server.cpp  ned2eus.cpp
extensions/ros2dds/: CMakeLists.txt  SConstruct.in  register_types.cpp
extensions/ros2dds/idl/builtin_interfaces/msg/: Duration.idl  Time.idl
extensions/ros2dds/idl/nav_msgs/msg/: Path.idl
extensions/ros2dds/idl/sensor_msgs/msg/: Range.idl
extensions/ros2dds/idl/visualization_msgs/msg/: Marker.idl
extensions/ros2dds/include/: camera_info_publisher.h  compressed_image_publisher.h  conversion.h  coordinate_3d.h  enu2eus.h  enu2ned.h  image_publisher.h  marker_publisher.h  marker_subscriber.h  path_publisher.h  path_subscriber.h  point_cloud_publisher.h  point_cloud_subscriber.h  point_stamped_publisher.h  point_stamped_subscriber.h  pose_stamped_publisher.h  pose_stamped_subscriber.h  publisher.h  range_publisher.h  ros2dds.h  subscriber.h
extensions/ros2dds/include/builtin_interfaces/msg/: Duration.cxx  Duration.h  DurationPubSubTypes.cxx  DurationPubSubTypes.h  TimePubSubTypes.cxx  TimePubSubTypes.h
extensions/ros2dds/include/geometry_msgs/msg/: Point32PubSubTypes.cxx  Point32PubSubTypes.h  PointPubSubTypes.cxx  PointPubSubTypes.h  PointStamped.cxx  PointStampedPubSubTypes.cxx  PointStampedPubSubTypes.h  PosePubSubTypes.cxx  PosePubSubTypes.h  PoseStamped.cxx  PoseStampedPubSubTypes.cxx  PoseStampedPubSubTypes.h  PoseWithCovariance.cxx  PoseWithCovariancePubSubTypes.cxx  PoseWithCovariancePubSubTypes.h  PoseWithCovarianceStamped.cxx  PoseWithCovarianceStampedPubSubTypes.cxx  PoseWithCovarianceStampedPubSubTypes.h  Quaternion.cxx  QuaternionPubSubTypes.cxx  QuaternionPubSubTypes.h  QuaternionStamped.cxx  QuaternionStampedPubSubTypes.cxx  QuaternionStampedPubSubTypes.h  TwistPubSubTypes.cxx  TwistPubSubTypes.h  TwistStamped.cxx  TwistStampedPubSubTypes.cxx  TwistStampedPubSubTypes.h  TwistWithCovariance.cxx  TwistWithCovariancePubSubTypes.cxx  TwistWithCovariancePubSubTypes.h  TwistWithCovarianceStamped.cxx  TwistWithCovarianceStampedPubSubTypes.cxx  TwistWithCovarianceStampedPubSubTypes.h  Vector3PubSubTypes.cxx  Vector3PubSubTypes.h  Vector3Stamped.cxx  Vector3StampedPubSubTypes.cxx  Vector3StampedPubSubTypes.h  (+6 more)
extensions/ros2dds/include/nav_msgs/msg/: GridCells.cxx  GridCells.h  GridCellsPubSubTypes.cxx  GridCellsPubSubTypes.h  MapMetaData.cxx  MapMetaData.h  MapMetaDataPubSubTypes.cxx  MapMetaDataPubSubTypes.h  Path.cxx  Path.h  PathPubSubTypes.cxx  PathPubSubTypes.h
extensions/ros2dds/include/sensor_msgs/: distortion_models.hpp  fill_image.hpp  image_encodings.hpp  point_cloud2_iterator.hpp  point_cloud_conversion.hpp  point_field_conversion.hpp
extensions/ros2dds/include/sensor_msgs/impl/: point_cloud2_iterator.hpp
extensions/ros2dds/include/sensor_msgs/msg/: CameraInfo.cxx  CameraInfoPubSubTypes.cxx  CameraInfoPubSubTypes.h  ChannelFloat32.cxx  ChannelFloat32PubSubTypes.cxx  ChannelFloat32PubSubTypes.h  CompressedImage.cxx  CompressedImagePubSubTypes.cxx  CompressedImagePubSubTypes.h  Illuminance.cxx  IlluminancePubSubTypes.cxx  IlluminancePubSubTypes.h  ImagePubSubTypes.cxx  ImagePubSubTypes.h  LaserScan.cxx  LaserScanPubSubTypes.cxx  LaserScanPubSubTypes.h  PointCloud.cxx  PointCloud2.cxx  PointCloud2PubSubTypes.cxx  PointCloud2PubSubTypes.h  PointCloudPubSubTypes.cxx  PointCloudPubSubTypes.h  PointField.cxx  PointFieldPubSubTypes.cxx  PointFieldPubSubTypes.h  Range.cxx  Range.h  RangePubSubTypes.cxx  RangePubSubTypes.h  RegionOfInterest.cxx  RegionOfInterestPubSubTypes.cxx  RegionOfInterestPubSubTypes.h
extensions/ros2dds/include/std_msgs/msg/: Bool.cxx  BoolPubSubTypes.cxx  BoolPubSubTypes.h  Byte.cxx  ByteMultiArray.cxx  ByteMultiArrayPubSubTypes.cxx  ByteMultiArrayPubSubTypes.h  BytePubSubTypes.cxx  BytePubSubTypes.h  Char.cxx  CharPubSubTypes.cxx  CharPubSubTypes.h  ColorRGBA.cxx  ColorRGBAPubSubTypes.cxx  ColorRGBAPubSubTypes.h  Empty.cxx  EmptyPubSubTypes.cxx  EmptyPubSubTypes.h  Float32MultiArray.cxx  Float32MultiArrayPubSubTypes.cxx  Float32MultiArrayPubSubTypes.h  Float32PubSubTypes.cxx  Float32PubSubTypes.h  Float64.cxx  Float64MultiArray.cxx  Float64MultiArrayPubSubTypes.cxx  Float64MultiArrayPubSubTypes.h  Float64PubSubTypes.cxx  Float64PubSubTypes.h  Header.h  HeaderPubSubTypes.cxx  HeaderPubSubTypes.h  Int16.cxx  Int16MultiArray.cxx  Int16MultiArrayPubSubTypes.cxx  Int16MultiArrayPubSubTypes.h  Int16PubSubTypes.cxx  Int16PubSubTypes.h  Int32.cxx  Int32MultiArray.cxx  (+48 more)
extensions/ros2dds/include/visualization_msgs/msg/: Marker.cxx  Marker.h  MarkerArray.cxx  MarkerArray.h  MarkerArrayPubSubTypes.cxx  MarkerArrayPubSubTypes.h  MarkerPubSubTypes.cxx  MarkerPubSubTypes.h  MeshFile.cxx  MeshFile.h  MeshFilePubSubTypes.cxx  MeshFilePubSubTypes.h  UVCoordinate.cxx  UVCoordinate.h  UVCoordinatePubSubTypes.cxx  UVCoordinatePubSubTypes.h
extensions/ros2dds/src/: coordinate_3d.cpp  enu2eus.cpp  enu2ned.cpp  publisher.cpp  ros2dds.cpp  subscriber.cpp
extensions/serial/: CMakeLists.txt  SConstruct.in  register_types.cpp  serial_port.cpp  serial_port.h
extensions/serial/cmake/: FindWindowsSDK.cmake
extensions/serial/include/serial/impl/: unix.h  win.h
extensions/serial/src/: serial.cc
extensions/serial/src/impl/: unix.cc  win.cc
extensions/serial/src/impl/list_ports/: list_ports_linux.cc  list_ports_osx.cc  list_ports_win.cc
(+831 files in other folders)
